[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qstvec"
version = "0.1.0"
description = "A sparse and truncated state vector simulator for quantum circuits"
readme = "README.md"
dependencies = ["numpy", "qiskit", "psutil"]
urls = {
    "Homepage" = "https://github.com/diogoff/qstvec/",
    "Source" = "https://github.com/diogoff/qstvec/",
    "Tracker" = "https://github.com/diogoff/qstvec/issues"
}