[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qstvec"
version = "0.1.2"
description = "A sparse and truncated state vector simulator for quantum circuits"
authors = [{name = "Diogo R. Ferreira", email = "diogo.ferreira@tecnico.ulisboa.pt"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy", "qiskit", "psutil"]

[project.urls]
Homepage = "https://github.com/diogoff/qstvec/"
Source = "https://github.com/diogoff/qstvec/"
Tracker = "https://github.com/diogoff/qstvec/issues"